# backo

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  release.yml  test.yml  test_examples.yml
backo/: __init__.py  action.py  api_toolbox.py  app.py  backoffice.py  collection.py  collection_addon.py  current_user.py  db_backo_redirect.py  db_connector.py  db_ldap_connector.py  db_mongo_connector.py  db_restfull_connector.py  db_sql_connector.py  db_sqlite_connector.py  db_yml_connector.py  error.py  generic.py  item.py  log.py  loop_path.py  meta_data_handler.py  migration_report.py  openapi.py  patch.py  ref.py  reference.py  refslist.py  request_decorators.py  selection.py  status.py  transaction.py  view.py
backo/database/: README.md  attribute.py  connection.py  engine.py  item.py  mapper.py  request.py
backo/file/: blob_file.py  file.py  file_blob_connector.py  file_connector.py  file_system_connector.py
backo/initialisation/: init_script.py
backo/ldap/: connection.py  connector.py  item.py  request.py
backo/utils/: nested_data_path.py
backo/yaml/: connection.py  engine.py  item.py  request.py
docs/source/: api_reference.rst  conf.py  errors.rst
examples/media_library/: README.md  __init__.py  backoffice.py  migration.py  tests.py
examples/nationality/: README.md  backoffice.py  tests.py
examples/rest-api-connector/: __init__.py  backoffice.py  config.yaml  tests.py
tests/: __init__.py  test_action.py  test_api_toolbox.py  test_crud.py  test_current_user.py  test_file.py  test_log.py  test_meta.py  test_migrations.py  test_mongo.py  test_openapi.py  test_reference.py  test_rest_api_connector.py  test_routes.py  test_selections.py  test_sql_connector.py  test_view.py
(+58 files in other folders)
