[project]
name = "backo"
version = "0.1.0"
authors = [
  { name="Bertrand Wallrich", email="Bertrand.Wallrich@inria.fr" },
]
description = "Back office low code"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyjwt",
  "flask",
  "pyyaml",
  "deepdiff",
  "stricto>=0.1.1"
]

[project.urls]
GitHub = "https://github.com/bwallrich/backo"
Homepage = "https://github.com/bwallrich/backo"
Issues = "https://github.com/bwallrich/backo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.coverage.run]
omit = [
    # omit stricto
    "*/stricto/*"
    ]
