[project]
name = "backo"
version = "0.2.1"
authors = [
  { name="Bertrand Wallrich", email="Bertrand.Wallrich@inria.fr" },
]
description = "Back office low code"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyjwt",
  "flask",
  "requests",
  "pyyaml",
  "deepdiff",
  "python-magic",
  "pymongo",
  "stricto>=0.2.2"
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "pylint",
	"pyhamcrest",
]

[project.urls]
GitHub = "https://github.com/backo-stricto/backo"
Homepage = "https://github.com/backo-stricto/backo"
Issues = "https://github.com/backo-stricto/backo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.coverage.run]
omit = [
    # omit stricto
    "*/stricto/*"
    ]
